[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
url = "2.2.2"
futures = "0.3.24"
futures-util = "0.3.24"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-channel = "0.3.24"
async-recursion = "1.0.4"
